# rotary-voip

./: .env.template  .env.test.example  .gitignore  .pylintrc  CLAUDE.md  Claude.MD  HARDWARE.md  README.md  TESTING.md  check.sh  config.yml.example  docker-compose.test.yml  install.sh  next-steps.md  next_steps.md  project_plan.md  pyproject.toml  restore.sh  rotary-voip-guide.md  run_integration_tests.sh
.github/workflows/: ci.yml
docker/sipp/: Dockerfile
docker/sipp/scenarios/: simple_uas.xml
docs/superpowers/plans/: 2026-05-23-finish-auth.md  2026-05-23-test-cleanup.md  2026-05-23-test-quality.md
scripts/: manage_users.py
scripts/ci/: check.sh
src/rotary_phone/: __init__.py  call_logger.py  call_manager.py  exceptions.py  main.py
src/rotary_phone/audio/: __init__.py  audio_handler.py  pyvoip_patches.py
src/rotary_phone/config/: __init__.py  config_manager.py  default_config.yaml  models.py
src/rotary_phone/database/: __init__.py  database.py  models.py
src/rotary_phone/hardware/: __init__.py  dial_reader.py  dial_tone.py  gpio_abstraction.py  hook_monitor.py  pins.py  ringer.py
src/rotary_phone/network/: __init__.py  access_point.py  network_monitor.py  wifi_manager.py
src/rotary_phone/sip/: __init__.py  in_memory_client.py  pyvoip_client.py  sip_client.py
src/rotary_phone/web/: __init__.py  app.py  auth.py  log_buffer.py  models.py  rate_limiter.py
src/rotary_phone/web/api/: __init__.py
src/rotary_phone/web/routes/: __init__.py  allowlist.py  auth.py  calls.py  logs.py  network.py  settings.py  sounds.py  speed_dial.py
src/rotary_phone/web/static/: app.js  captive.html  index.html  login.html  styles.css
src/rotary_phone/web/websocket/: __init__.py  events.py  manager.py
systemd/: README.md  install.sh  rotary-phone.service  uninstall.sh
tests/: __init__.py  conftest.py  test_audio_handler.py  test_auth.py  test_call_logger.py  test_call_manager.py  test_config_manager.py  test_database.py  test_dial_reader.py  test_dial_tone.py  test_gpio.py  test_harness.py  test_hook_monitor.py  test_integration_e2e.py  test_ringer.py  test_route_auth.py  test_sip_client.py  test_sip_integration.py  test_web_allowlist.py  test_web_speed_dial.py  test_websocket.py
tests/manual/: __init__.py  create_test_audio.py  test_harness.py  test_real_phone.py  test_real_sip.py
