[project]
name = "rotary-phone"
version = "0.1.0"
description = "Rotary phone VoIP controller - converts vintage rotary phones to WiFi VoIP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyvoip>=1.6.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "mypy>=1.6.0",
    "pylint>=3.0.0",
    "types-pyyaml>=6.0",
]

[project.scripts]
rotary-phone = "rotary_phone.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["manual"]  # Exclude manual test scripts
markers = [
    "integration: marks tests as integration tests (require Docker/SIP server)",
]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not integration",  # Exclude integration tests by default
]
# Coverage will be added later when we have real functionality to test

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pylint.main]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[dependency-groups]
dev = []
