[project]
name = "rotary-phone"
version = "0.1.0"
description = "Rotary phone VoIP controller - converts vintage rotary phones to WiFi VoIP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyvoip>=1.6.8",
    "pyyaml>=6.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "pyaudio>=0.2.13",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "mypy>=1.6.0",
    "pylint>=3.0.0",
    "types-pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
rotary-phone = "rotary_phone.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["manual"]  # Exclude manual test scripts
markers = [
    "integration: marks tests as integration tests (require Docker/SIP server)",
    "flaky: marks tests as flaky (timing-sensitive E2E tests)",
]
addopts = [
    "-v",
    "--strict-markers",
    "-m", "not integration and not flaky",  # Exclude integration and flaky tests by default
    "--cov=src/rotary_phone",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pylint.main]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
